[package]
name = "engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored", "send", "serialize"], optional = true }
bytes = "1.5"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candle-core = { version = "0.8.2" }
candle-nn = { version = "0.8.2" }

[features]
default = ["lua"]
lua = ["dep:mlua"]